# cast

./: .envrc  .gitignore  .typos.toml  ACKNOWLEDGMENTS.md  CHANGELOG.md  Cargo.toml  FUTURE_PLAN.md  Makefile  PLAN.md  README.md  REUSE.toml  flake.nix  justfile
crates/config/: Cargo.toml
crates/config/src/: declaration.rs  gluon.rs  lib.rs  rooted_gluon.rs
crates/config/src/declaration/: atomic_persistence.rs  evaluator_set.rs  fixed_root_load_error.rs  fixed_root_loader.rs  fragment_set.rs  generated_slot.rs  loaded.rs  managed_directory.rs  manager.rs  manager_error.rs  root_slot.rs  rooted_fragment_set.rs  rooted_load_error.rs  rooted_loader.rs  storage_error.rs
crates/config/src/gluon/: atomic_persistence.rs  fragment_collection.rs  tests.rs
crates/config/tests/: declaration_adapter_contract.rs  fixed_root_language_neutral_loader.rs  language_neutral_manager.rs  rooted_language_neutral_loader.rs
crates/declarative_config/: Cargo.toml
crates/declarative_config/src/: content_hash.rs  deadline.rs  declaration_error.rs  diagnostic.rs  evaluation.rs  identity.rs  language.rs  lib.rs  limits.rs  module_graph.rs  source.rs  source_access.rs
crates/declarative_config/tests/: evaluation.rs  module_graph.rs  source_root.rs
crates/forge/: Cargo.toml
crates/forge/gluon/: boot_topology.glu  repository.glu  root_filesystem.glu  system.glu
crates/forge/src/: boot_publication.rs  declaration_migration.rs  dependency.rs  environment.rs  installation.rs  lib.rs  linux_fs.rs  request.rs  runtime.rs  signal.rs  state.rs  system_model.rs  test_support.rs  transition_identity.rs  transition_journal.rs  tree_marker.rs  util.rs
crates/forge/src/boot_publication/: receipt_body.rs  receipt_body_tests.rs  receipt_codec.rs  receipt_codec_tests.rs  tests.rs
crates/forge/src/cli/: boot.rs  cache.rs  extract.rs  fetch.rs  index.rs  info.rs  inspect.rs  install.rs  list.rs  mod.rs  remove.rs  repo.rs  search.rs  search_file.rs  state.rs  sync.rs
crates/forge/src/client/: active_reblit_tests.rs  active_reblit_transition.rs  active_state_authority.rs  active_state_authority_tests.rs  active_state_snapshot.rs  active_state_snapshot_tests.rs  archived_repair.rs  archived_repair_materialization.rs  archived_repair_metadata.rs  archived_repair_tests.rs  boot.rs  cache.rs  candidate_metadata.rs  clean_boot_synchronization.rs  external_materialization.rs  extract.rs  fetch.rs  fixed_staging.rs  index.rs  install.rs  journal_usr_exchange_authority.rs  legacy_boot_repair.rs  mod.rs  mutable_startup_namespace_tests.rs  mutable_system_capabilities.rs  postblit.rs  prune.rs  read_only.rs  remove.rs  resolve.rs  self_upgrade.rs  startup_gate.rs  startup_gate_tests.rs  startup_reconciliation.rs  startup_recovery.rs  sync.rs  transaction_root.rs  verify.rs
crates/forge/src/db/: mod.rs  read_only.rs
crates/forge/src/installation/: cache_tag.rs  directory_control.rs  lockfile.rs  locking.rs  mutable_namespace.rs  snapshot.rs  state_discovery.rs  tests.rs
crates/forge/src/linux_fs/: boot_file_publication_name.rs  descriptor_access.rs  descriptor_boot_filesystem.rs  descriptor_boot_namespace.rs  descriptor_devtmpfs_filesystem.rs  descriptor_metadata.rs  directory_security.rs  gpt_partition_device.rs  gpt_partition_role.rs  mount_namespace.rs  mountinfo.rs  mountinfo_attachment.rs  mountinfo_boot_policy.rs  mountinfo_devtmpfs_policy.rs  namespace_operations.rs  sysfs_block.rs  sysfs_identity.rs  tests.rs
crates/forge/src/package/: meta.rs  mod.rs  render.rs
crates/forge/src/registry/: mod.rs  transaction.rs
crates/forge/src/repository/: format.rs  gluon.rs  handle_outdated.rs  lua.rs  manager.rs  mod.rs
crates/forge/src/system_model/: gluon.rs  lua.rs  rooted.rs  spec.rs
crates/forge/src/transition_identity/: active_previous_slot_parking.rs  active_reblit_boot_state_roots.rs  active_reblit_boot_state_roots_tests.rs  active_reblit_replacement_recovery.rs  archived_candidate.rs  archived_state_identity.rs  archived_state_prune.rs  candidate_metadata.rs  candidate_quarantine.rs  candidate_state_authority.rs  error.rs  fault_injection.rs  journal_active_reblit.rs  legacy_boot_repair.rs  namespace_helpers.rs  previous_tree_move.rs  prune_residue.rs  retained_usr_exchange_syscall.rs  reusable_previous_slot.rs  slot_link_recovery.rs  staging_wrapper_rotation.rs  state_slot_marker.rs  state_tree_metadata.rs  tree_lifecycle.rs
crates/forge/src/transition_journal/: codec.rs  model.rs  read_only.rs  recovery.rs  runtime_evidence.rs  store.rs  successors.rs  validation.rs
crates/gitwrap/: Cargo.toml
crates/gitwrap/src/: error.rs  lib.rs  repository_fs.rs
crates/gluon_config/: Cargo.toml
crates/gluon_config/src/: deadline.rs  decoder.rs  diagnostic.rs  engine.rs  evaluator.rs  fingerprint.rs  import.rs  lib.rs  limits.rs  runtime.rs  source.rs
crates/gluon_config/tests/: engine_adapter.rs  evaluator.rs  source_root.rs
crates/libstone/: Cargo.toml  build.rs  cbindgen.toml
crates/libstone/examples/: read.c
crates/libstone/src/: lib.rs  payload.rs  stone.h
crates/lua_config/: Cargo.toml
crates/lua_config/src/: decode.rs  emit.rs  engine.rs  imports.rs  lib.rs  profile.rs  value.rs
crates/lua_engine_spike/: Cargo.toml
crates/lua_engine_spike/src/: imports.rs  lib.rs
crates/stone_recipe/: Cargo.toml
crates/stone_recipe/gluon/: build_policy.glu  build_policy_layers.glu  macros.glu  package.glu  policy.glu  recipe.glu
crates/stone_recipe/src/: gluon.rs  lib.rs  macros.rs  spec.rs  tuning.rs  upstream.rs  validation.rs
crates/stone_recipe/tests/: build_policy.rs  build_policy_layers.rs  build_policy_patch.rs  builders_v2.rs  gluon.rs  package_v2.rs  package_v3.rs
crates/tools_buildinfo/: Cargo.toml  build.rs
crates/tools_buildinfo/src/: lib.rs  native_build_context.rs  semantic_fingerprint.rs  tool_identity.rs  values.rs
crates/tools_buildinfo/tests/: semantic_fingerprint.rs
crates/triggers/: Cargo.toml
crates/triggers/gluon/: trigger.glu
crates/triggers/src/: format.rs  gluon.rs  lib.rs  lua.rs  registry.rs  spec.rs
crates/triggers/tests/: gluon.rs
(+1876 files in other folders)
