# SPDX-FileCopyrightText: 2023 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "config"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
declarative_config = { path = "../declarative_config" }
dirs.workspace = true
fs-err.workspace = true
gluon_config = { path = "../gluon_config" }
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
