[package]
name = "declarative_config"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
fs-err = { version = "3.3.0", default-features = false }
libc.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
