# SPDX-FileCopyrightText: 2023 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "forge"
autobins = false
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
# Needed for unixepoch() in src/db/state/migrations/2025-03-04-201550_init/up.sql
ignored = ["libsqlite3-sys"]

[features]
testing = []

[dependencies]
config = { path = "../../crates/config" }
container = { path = "../../crates/container" }
dag = { path = "../../crates/dag" }
declarative_config = { path = "../../crates/declarative_config" }
stone = { path = "../../crates/stone" }
triggers = { path = "../../crates/triggers" }
tui = { path = "../../crates/tui" }
vfs = { path = "../../crates/vfs" }

blsforme.workspace = true
bytes.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
itertools.workspace = true
fnmatch = { path = "../../crates/fnmatch" }
filetime.workspace = true
fs-err.workspace = true
futures-util.workspace = true
gluon.workspace = true
gluon_codegen.workspace = true
gluon_config = { path = "../../crates/gluon_config" }
hex.workspace = true
indexmap.workspace = true
libsqlite3-sys.workspace = true
log.workspace = true
nix.workspace = true
os-info.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
sha2.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
xxhash-rust.workspace = true
zbus.workspace = true
astr = { workspace = true, features = ["diesel"] }
tempfile.workspace = true

[lints]
workspace = true
