# SPDX-FileCopyrightText: 2026 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "gitwrap"
edition = "2021"
version.workspace = true
rust-version.workspace = true

[dependencies]
fs-err.workspace = true
nix.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[lints]
workspace = true
