# SPDX-FileCopyrightText: 2026 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "gluon_config"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
fs-err = { version = "3.3.0", default-features = false }
gluon.workspace = true
libc.workspace = true
sha2.workspace = true

[dev-dependencies]
gluon_codegen.workspace = true
tempfile.workspace = true

[lints]
workspace = true
