
[package]
name = "gluon_config"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
declarative_config = { path = "../declarative_config" }
gluon.workspace = true
sha2.workspace = true

[dev-dependencies]
fs-err = { version = "3.3.0", default-features = false }
gluon_codegen.workspace = true
tempfile.workspace = true

[lints]
workspace = true
