# SPDX-FileCopyrightText: 2023 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "stone_recipe"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluon.workspace = true
gluon_codegen.workspace = true
gluon_config.path = "../gluon_config"
nom.workspace = true
snafu.workspace = true
strum.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
