# SPDX-FileCopyrightText: 2024 AerynOS Developers
# SPDX-License-Identifier: MPL-2.0

[package]
name = "triggers"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
dag = { path = "../dag" }
declarative_config = { path = "../declarative_config" }
fnmatch = { path = "../fnmatch" }
gluon.workspace = true
gluon_codegen.workspace = true
gluon_config = { path = "../gluon_config" }
lua_config = { path = "../lua_config" }
serde = { workspace = true }

thiserror.workspace = true

[lints]
workspace = true
